--- a/css/style.scss
+++ b/css/style.scss
@@ -1,11 +1,160 @@
-$blurbColor: blue;
+.hero{
+	width:100%;
+	min-width: 1000px;
+	max-width:1300px;
+}
+.title{
+	position: absolute;
+	top:30px;
+	left: 50px;
+	color: white;
+	font-size: 140px;
+}
+
+@media only screen and (max-width: 600px) {
+	h1{font-size: 40px;}
+	h2{font-size: 30px;}
+	body{ font-size: 12px; }
+}
+
+.content{
+	font-family: sans-serif;
+	background-color: black;
+}
+
+.nav{
+	ul li{
+		padding:14px;
+		margin-left: 5px;
+		border-radius:25px;
+		display: inline-block;
+		background-color: #66CCFF;
+	}
+	li:hover{
+		background-color: #003366;
+		transition:1s;
+	}
+	ul{
+		position: absolute;
+		right:100px;
+		top:30px;
+		float:right;
+	}
+	a{
+		color: white;
+		text-decoration: none;
+		font-family: sans-serif;
+	}
+	a:link    {
+		color:white;
+	}
+	a:visited {
+	}
+	a:hover   {
+		color:red;
+		transition:1s;
+	}
+	a:active  {
+		color:yellow;
+	}
+}
+
+.infoHeader {
+	margin-left: 50px;
+	img{	
+		float:left;
+		max-height:60px;
+		margin-right:10px;
+	}
+	h2{
+		font-size: 60px;
+		color:white;
+	}
+}
+
+.center{
+	width:90%;
+	margin:0 auto;
+}
+
+.sectIntro{
+	color:#374857;
+
+	a{
+		color:#374857;
+	}
+}
 
 .blurb{
-	p{
-
-	}
+	float:left;
+	margin-top:25px;
+	margin-bottom:25px;
+	margin-right: 1%;
+	padding: 10px;
+	color:#E6E6E6;
+	background-color: #374857;
+	border-radius:25px;
 
 	ul{
 		list-style:none;
 	}
+
+	h3{
+		text-align: right;
+		font-size:25px;
+	}
+
+	a{
+		color:white;
+	}
+	a:hover{
+		color:#CFF9FF;
+	}
 }
+
+.thirds{
+	width:30%;
+	min-width: 220px;
+}
+.half{
+	width:45%;
+	min-width: 340px;
+}
+
+section{
+	float:none;
+	clear:both;
+	margin:-3;
+	overflow: hidden;
+
+	background-color: #374857;
+	transition:2s;
+
+	section:hover{
+		background-color: #6A8DAB;
+		transition:2s;
+	}
+}
+
+.instruction{
+	padding:15px;
+	width:95%;
+	color:white;
+	a{
+		color:white;
+	}
+	a:hover{
+		color:#CFF9FF;
+	}
+}
+
+.instruction:hover{
+	background-color: #6A8DAB;
+	transition:2s;
+}
+
+code{
+	color:black;
+}
+
+
