--- a/css/style.css
+++ b/css/style.css
@@ -176,3 +176,16 @@ code {
   color: white;
   margin-top: 20px;
   text-align: center; }
+
+.highlight {
+  border-style: solid;
+  border-color: white;
+  border-width: 5px;
+  transition: .5s; }
+
+.read {
+  opacity: .5;
+  transition: .5s; }
+
+#draggable {
+  z-index: 999; }
